--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 certifi==2022.5.18.1
-cffi==1.15.1
+cffi==1.16.0
 chardet==4.0.0
 charset-normalizer==2.0.12
 click==8.1.3
 cryptography==38.0.1
 fido2==1.0.0
 idna==3.3
-lxml==4.8.0
+lxml==5.2.1
+keyring==25.2.0
 pycparser==2.21
+pyotp==2.9.0
 requests==2.27.1
 urllib3==1.26.9
